trying to fix x-axis spacing

--- a/index-view/src/main/resources/static/css/style.css
+++ b/index-view/src/main/resources/static/css/style.css
@@ -228,7 +228,7 @@ width:100%;
 height:100%;
 }
 
-#myChart {max-height:6000px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
+#myChart {max-height:1000px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
 
 .rightsidebar{height:100%;width:200px;background-color:#fff;position:fixed!important;z-index:1;overflow:auto}
 
